--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -7,10 +7,10 @@
         <tr>
             <th>Sutta</th>
             <th>Words</th>
-            <th>Links</th>
             <th>Count</th>
+            <th>Metaphors</th>
             <th class="none">Quote</th>
-           <th>Metaphors</th>
+            <th class="none">Links</th>
         </tr>
     </thead>
     <tbody>
