--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -9,8 +9,9 @@
             <th>Words</th>
             <th>Count</th>
             <th>Metaphors</th>
+            <th class="none">Title</th>
             <th class="none">Quote</th>
-            <th class="none">Links</th>
+            <th class="none">Full texts</th>
         </tr>
     </thead>
     <tbody>
