--- a/templates/ListTableHeader.html
+++ b/templates/ListTableHeader.html
@@ -8,7 +8,7 @@
             <th>Pattern</th>
             <th>Date</th>
             <th>Size</th>
-            <th class="none"></th>
+<!-- <th class="none">Summary</th> -->
         </tr>
     </thead>
     <tbody>
