--- a/templates/Header.html
+++ b/templates/Header.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>$title</title>
+  <link rel="icon" type="image/png" href="https://find.dhamma.gift/templates/favico.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <script
