hhh# Please enter the commit message for your changes. Lines starting

--- a/templates/ListTableHeader.html
+++ b/templates/ListTableHeader.html
@@ -6,9 +6,12 @@
     <thead>
         <tr>
             <th>Pattern</th>
-            <th>Date</th>
+            <th>Texts</th>
+            <th>Matches</th>
             <th>Size</th>
-<!-- <th class="none">Summary</th> -->
+            <th>Pitaka</th>
+            <th class="none">Language</th>
+            <th class="none">Date</th>
         </tr>
     </thead>
     <tbody>
