--- a/css/styles.css
+++ b/css/styles.css
@@ -3036,7 +3036,7 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #1abc9c;
+  background-color: #16a085;
   border-color: #1abc9c;
 }
 .btn-primary:hover {
