--- a/templates/ListTableHeader.html
+++ b/templates/ListTableHeader.html
@@ -6,11 +6,11 @@
     <thead>
         <tr>
             <th>Pattern</th>
+            <th>Language</th>
             <th>Texts</th>
             <th>Matches</th>
-            <th>Size</th>
             <th>Pitaka</th>
-            <th class="none">Language</th>
+            <th>Size</th>
             <th class="none">Date</th>
         </tr>
     </thead>
