kkj# with '#' will be ignored, and an empty message aborts the commit.

--- a/templates/Header.html
+++ b/templates/Header.html
@@ -25,6 +25,9 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
     background-color:#912a07
 }
 
+freebutton {
+text-align: left;
+}
 	
     b {
     color:#912a07;
