--- a/templates/Header.html
+++ b/templates/Header.html
@@ -47,7 +47,13 @@ text-align: left;
 	.styled {
 	  content: "";
 	  display: block;
-	  height: 1em;
+	  height: 0.8em;
+	}
+	.btwntrn {
+	    content: "";
+	  display: block;
+	  height: 0.3em;
+	  
 	}
       </style>
 
