--- a/css/extrastyles.css
+++ b/css/extrastyles.css
@@ -29,11 +29,11 @@
 	  display:none;	  
   }
 
-/*.mobile-center {
+.mobile-center {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  */
+  
 }
 
 
