update from server

--- a/templates/WordTableHeader.html
+++ b/templates/WordTableHeader.html
@@ -6,7 +6,8 @@
     <thead>
         <tr>
             <th>Word</th>
-            <th>Count</th>
+            <th>Texts</th>
+            <th>Matches</th>
             <th class="none"></th>
         </tr>
     </thead>
