--- a/templates/ListTableHeader.html
+++ b/templates/ListTableHeader.html
@@ -1,9 +1,10 @@
-    <h3>$title</h3>
-    <button id="btn-hide-all-children" type="button">Saṁvaṭṭo</button>    
-<button id="btn-show-all-children" type="button">Vivaṭṭo</button>
+<div class="container-fluid mt-2">    
+    <h3 class="pl-2 ml-2">$title</h3>
+    <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>    
+<button id="btn-show-all-children" class="btn btn-light" type="button">Vivaṭṭo</button>
 <hr>
-<table id="pali" class="display" cellspacing="0" width="100%">
-    <thead>
+<table id="pali" class="display table table table-striped table-hover table-responsive " cellspacing="0" width="100%">
+   <thead class="thead-light">
         <tr>
             <th>Pattern</th>
             <th>Language</th>
