--- a/css/extrastyles.css
+++ b/css/extrastyles.css
@@ -1,10 +1,18 @@
+::-webkit-scrollbar {
+width: 16px;
+height: 16px; }
+
+::-webkit-scrollbar-thumb {
+background-color: rgba(0, 0, 0, 0.2);
+-webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07); }
+
 .ui-autocomplete { 
 max-height: 200px; 
 overflow-y: auto; 
 overflow-x: hidden;
 scrollbar-color: #6969dd #e0e0e0;
-border-radius: 25px;
-
+border-radius: 0.5rem;
+max-width: 274px;
 }
 
 
