--- a/templates/Footer.html
+++ b/templates/Footer.html
@@ -4,14 +4,10 @@ $(document).ready(function (){
 
 	 var table = $('#pali').DataTable({
 	   'stateSave': true,
-	    'paging'  : false,
+	    'paging'  : true,
 	  'responsive': true,
 	  'columnDefs': [{ type: 'natural', targets: '_all' }
-                    ],
-		'renderer': {
-		  "header": "jqueryui",
-      "pageButton": "bootstrap"
-    }					
+                    ]
     });
 	  
 	  
