--- a/templates/mahārukkh_suttanta_pali_words.html
+++ b/templates/mahārukkh_suttanta_pali_words.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>$title</title>
+  <title>Mahārukkh 5 related words in 6 texts and 23 matches in Suttanta Pali</title>
   <link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
@@ -16,8 +16,6 @@
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/jq-3.6.0/jszip-2.5.0/dt-1.12.1/af-2.4.0/b-2.2.3/b-colvis-2.2.3/b-html5-2.2.3/b-print-2.2.3/cr-1.5.6/date-1.1.2/fc-4.1.0/fh-3.2.4/kt-2.7.0/r-2.3.0/rg-1.2.0/rr-1.2.8/sc-2.0.7/sb-1.3.4/sp-2.0.2/sl-1.4.0/sr-1.1.1/datatables.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/plug-ins/1.12.1/sorting/natural.js"></script>
 
-<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-<script src="/js/autopali.js"></script>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css
@@ -25,7 +23,7 @@
 <link href="/css/extrastyles.css" rel="stylesheet" />
 
   
-<style>
+   <style>
 	* {
       font-family: sans-serif;
     }
@@ -54,6 +52,8 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
     content:'-';
     background-color:#912a07
 }
+
+
 /* #2C3E50*/
 freebutton {
 text-align: left;
@@ -115,5 +115,83 @@ text-align: left;
 }
 
       </style>
+
+
 </head>
-<body>
+<body >
+<div class="container-fluid mt-2">    
+    <h3 class="pl-2 ml-2">Mahārukkh 5 related words in 6 texts and 23 matches in Suttanta Pali</h3>
+    <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>    
+<button id="btn-show-all-children" class="btn btn-light" type="button">Vivaṭṭo</button>
+<hr>
+<table id="pali" class="display table table table-striped table-hover table-responsive " cellspacing="0" width="100%">
+   <thead class="thead-light">
+        <tr>
+            <th>Word</th>
+            <th>Texts</th>
+            <th>Matches</th>
+            <th class="none"></th>
+        </tr>
+    </thead>
+    <tbody><tr>
+<td>dutiya<b>mahārukkh</b>asutta</td>
+<td>1</td>   
+<td>1</td>   
+<td><a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.56>sn12.56</a></td>
+</tr>
+<tr>
+<td><b>mahārukkh</b>ā</td>
+<td>1</td>   
+<td>3</td>   
+<td><a target=_blank href=https://find.dhamma.gift/sc/?q=sn46.39>sn46.39</a></td>
+</tr>
+<tr>
+<td><b>mahārukkh</b>asutta</td>
+<td>1</td>   
+<td>1</td>   
+<td><a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.55>sn12.55</a></td>
+</tr>
+<tr>
+<td><b>mahārukkh</b>ena</td>
+<td>1</td>   
+<td>1</td>   
+<td><a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.60>sn12.60</a></td>
+</tr>
+<tr>
+<td><b>mahārukkh</b>o</td>
+<td>5</td>   
+<td>17</td>   
+<td><a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.55>sn12.55</a> <a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.56>sn12.56</a> <a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.58>sn12.58</a> <a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.59>sn12.59</a> <a target=_blank href=https://find.dhamma.gift/sc/?q=sn12.60>sn12.60</a></td>
+</tr>
+</tbody>
+</table>
+<a href=/>Main page </a>
+<a href=/output/mahārukkh_suttanta_pali.html>Quotes</a>
+
+</div>
+    <script type='text/javascript'>
+$(document).ready(function (){
+
+	 var table = $('#pali').DataTable({
+	   'stateSave': true,
+	  'responsive': true,
+	  'columnDefs': [{ type: 'natural', targets: '_all' }
+                    ]    
+    });
+	  
+	  
+    // Handle click on "Expand All" button
+    $('#btn-show-all-children').on('click', function(){
+        // Expand row details
+        table.rows(':not(.parent)').nodes().to$().find('td:first-child').trigger('click');
+    });
+    // Handle click on "Collapse All" button
+    $('#btn-hide-all-children').on('click', function(){
+        // Collapse row details
+        table.rows('.parent').nodes().to$().find('td:first-child').trigger('click');
+    });
+});
+  </script>
+
+</body>
+</html>
