--- a/css/extrastyles.css
+++ b/css/extrastyles.css
@@ -1,3 +1,9 @@
+.mainbutton{
+	background-color: #10806A!important;
+	/*border-radius: 0.5rem;*/
+	z-index:999;
+}
+
 ::-webkit-scrollbar {
 width: 16px;
 height: 16px; }
@@ -6,15 +12,19 @@ height: 16px; }
 background-color: rgba(0, 0, 0, 0.2);
 -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07); }
 
-.ui-autocomplete { 
+	 .ui-autocomplete { 
 max-height: 200px; 
 overflow-y: auto; 
 overflow-x: hidden;
-scrollbar-color: #6969dd #e0e0e0;
+scrollbar-color: #10806A #10806A;
 border-radius: 0.5rem;
-max-width: 274px;
+max-width: 284px;
 }
 
+.roundedborder{
+	border-collapse: separate; 
+	border-radius: 0.5rem;
+}
 
 .outlink {
   color:#0d6efd;
