--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -10,7 +10,7 @@
             <th>Words</th>
             <th>Count</th>
             <th>Metaphors</th>
-            <th class="none">Title</th>
+            <th>Title</th>
             <th class="none">Quote</th>
             <th class="none">Full texts</th>
         </tr>
