--- a/css/extrastyles.css
+++ b/css/extrastyles.css
@@ -1,10 +1,3 @@
-
-.mainbutton{
-	background-color: #10806A!important;
-	/*border-radius: 0.5rem;*/
-	z-index:999;
-}
-
 ::-webkit-scrollbar {
 width: 16px;
 height: 16px; }
@@ -58,17 +51,22 @@ max-width: 274px;
     margin-top: 0;
     text-align: center;
 }
+ 
+.page-section {
+    padding: 2rem 0;!important
+}
 
-@media screen and (max-width: 900px) {
+.masthead { 
+	padding-bottom: 2rem;
+	}
+
+
+@media only screen and (max-width: 900px) {
 
 #mainNav .navbar-nav {
 	margin-top: 1.5rem;
 	text-align: left;	
 	}
-}
-
-
-@media only screen and (max-width: 530px) {
 
 
 .h5mobile {
@@ -77,7 +75,6 @@ max-width: 274px;
 
     .masthead { 
     padding-top: calc(1rem + 20px);
-	
 	}
 	
 .masthead .masthead-heading
