--- a/css/extrastyles.css
+++ b/css/extrastyles.css
@@ -63,6 +63,11 @@ max-width: 274px;
 
 @media only screen and (max-width: 900px) {
 
+#mainNav .navbar-toggler {
+    margin-right: 2rem;
+}
+
+
 #mainNav .navbar-nav {
 	margin-top: 1.5rem;
 	text-align: left;	
