--- a/templates/Header.html
+++ b/templates/Header.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>$title</title>
-  <link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="UTF-8">
+	<link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico-fdg.png" />
+ 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"/>
