--- a/templates/Header.html
+++ b/templates/Header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>$title</title>
-	<link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico-fdg.png" />
+	<link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico-noglass.png" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
