--- a/templates/Header.html
+++ b/templates/Header.html
@@ -4,6 +4,14 @@
     <title>$title</title>
 	<link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico-noglass.png" />
  
+<meta property="og:type" content="article" />
+<meta property="og:title" content="$title - find.Dhamma.gift" />
+<meta property="og:description" content="$title - find.Dhamma.gift" />
+
+<meta name="twitter:title" content="$title - find.Dhamma.gift">
+<meta name="twitter:description" content="$title - find.Dhamma.gift">
+<meta property="og:image" itemprop="image" content="" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 
