update from server

--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -10,9 +10,10 @@
             <th>Words</th>
             <th>Count</th>
             <th>Metaphors</th>
-            <th>Title</th>
+            <th>Full texts</th>
+            <th class="none"></th>
             <th class="none">Quote</th>
-            <th class="none">Full texts</th>
+
         </tr>
     </thead>
     <tbody>
