--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -7,11 +7,11 @@
    <thead class="thead-light">
         <tr>
             <th>Sutta</th>
+            <th>Title</th>
             <th>Words</th>
             <th>Count</th>
             <th>Metaphors</th>
             <th>Full texts</th>
-            <th class="none"></th>
             <th class="none">Quote</th>
 
         </tr>
