--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mt-2">    
     <h3 class="pl-2 ml-2">$title</h3>
-    <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>    
+    <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>
 <button id="btn-show-all-children" class="btn btn-light" type="button">Vivaṭṭo</button>
 <hr>
 <table id="pali" class="display table table table-striped table-hover table-responsive " cellspacing="0" width="100%">
@@ -10,8 +10,8 @@
             <th>Title</th>
             <th>Words</th>
             <th>Count</th>
-            <th>Metaphors</th>
-            <th>Full texts</th>
+            <th>Mtphr</th>
+            <th>Links</th>
             <th class="none">Quote</th>
 
         </tr>
