update from server

--- a/templates/ListTableHeader.html
+++ b/templates/ListTableHeader.html
@@ -12,7 +12,8 @@
             <th>Matches</th>
             <th>Pitaka</th>
             <th>Size</th>
-            <th class="none">Date</th>
+            <th>Date</th>
         </tr>
     </thead>
     <tbody>
+      <!-- class="none" -->
