update from server

--- a/templates/ListTableHeader.html
+++ b/templates/ListTableHeader.html
@@ -7,12 +7,13 @@
    <thead class="thead-light">
         <tr>
             <th>Pattern</th>
-            <th>Language</th>
             <th>Texts</th>
             <th>Matches</th>
+            <th>Words</th>
             <th>Pitaka</th>
-            <th>Size</th>
+            <th>Language</th>
             <th>Date</th>
+            <th class="none">Size</th>
         </tr>
     </thead>
     <tbody>
