--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -13,6 +13,8 @@
             <th>Mtphr</th>
             <th>Links</th>
             <th class="none">Quote</th>
+            <th class="none">Audio</th>
+            
 
         </tr>
     </thead>
