--- a/templates/ResultTableHeader.html
+++ b/templates/ResultTableHeader.html
@@ -13,7 +13,7 @@
             <th>Mtphr</th>
             <th>Links</th>
             <th class="none">Quote</th>
-            <th class="none">Audio</th>
+        <!-- <th class="none">Audio</th> -->
             
 
         </tr>
