update from server

--- a/assets/templates/Footer.html
+++ b/assets/templates/Footer.html
@@ -1,4 +1,5 @@
 </div>
+
     <script type='text/javascript'>
 $(document).ready(function (){
 
@@ -8,7 +9,8 @@ $(document).ready(function (){
 	    'paging'  : true,
 	  'responsive': true,
 	  'columnDefs': [
-	            { type: 'natural', targets: '_all' }
+	            { type: 'natural', targets: '_all' },
+	            { type: "html", target: 0 }
 					]				
     });
 	  
