update from server

--- a/assets/templates/Footer.html
+++ b/assets/templates/Footer.html
@@ -9,8 +9,8 @@ $(document).ready(function (){
 	    'paging'  : true,
 	  'responsive': true,
 	  'columnDefs': [
-	            { type: 'natural', targets: '_all' },
-	            { type: "html", target: 0 }
+	            { type: "html", target: [1,2] },
+	            { type: 'natural', targets: 0 }
 					]				
     });
 	  
