update from server

--- a/assets/templates/Header.html
+++ b/assets/templates/Header.html
@@ -19,8 +19,10 @@
 
 <script type="text/javascript" src="/assets/js/datatables.min.js"></script>
 <script type="text/javascript" src="/assets/js/natural.js"></script>
-<!-- <script type="text/javascript" src="/assets/js/strip-html.js"></script> -->
-<script type="text/javascript" src="https://cdn.datatables.net/plug-ins/1.13.1/filtering/type-based/html.js"></script>
+<script type="text/javascript" src="/assets/js/strip-html.js"></script>
+<!-- <script type="text/javascript" src="/assets/js/diacritics.js"></script> -->
+
+
 
 <link href="/assets/css/dataTables.bootstrap5.min.css
 " rel="stylesheet" type="text/css" />
