update from server

--- a/assets/templates/WordTableHeader.html
+++ b/assets/templates/WordTableHeader.html
@@ -9,7 +9,7 @@
             <th>Word</th>
             <th>Texts</th>
             <th>Matches</th>
-            <th></th>
+            <th class="none"></th>
         </tr>
     </thead>
     <tbody>
