--- a/assets/templates/Header.html
+++ b/assets/templates/Header.html
@@ -3,7 +3,7 @@
 <head>
 <title>$title</title>
 <link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico-noglass.png" />
- 
+ <meta http-equiv="Cache-control" content="public">
 <meta property="og:type" content="article" />
 <meta property="og:title" content="$title - find.Dhamma.gift" />
 <meta property="og:description" content="$title - find.Dhamma.gift" />
