--- a/assets/templates/ListTableHeader.html
+++ b/assets/templates/ListTableHeader.html
@@ -13,7 +13,8 @@
             <th>Pitaka</th>
             <th>Language</th>
             <th>Date</th>
-            <th class="none">Size</th>
+            <th>Size</th>
+            <th class="none">Links</th>
         </tr>
     </thead>
     <tbody>
