--- a/assets/templates/Header.html
+++ b/assets/templates/Header.html
@@ -24,8 +24,7 @@
 
 
 
-<link href="/assets/css/dataTables.bootstrap5.min.css
-" rel="stylesheet" type="text/css" />
+<link href="/assets/css/dataTables.bootstrap5.min.css" rel="stylesheet" type="text/css" />
 <link href="/assets/css/bootstrap.min.5.2.css" rel="stylesheet" type="text/css" />
 <link href="/assets/css/extrastyles.css" rel="stylesheet" />
 <link href="/assets/css/table.css" rel="stylesheet" />
