--- a/assets/css/extrastyles.css
+++ b/assets/css/extrastyles.css
@@ -1,3 +1,12 @@
+.mainbutton {
+  /*position: absolute; 
+  right :35px; */
+  z-index:9999;
+}
+
+.searchbar {
+  z-index:1;
+}
 ::-webkit-scrollbar {
 width: 16px;
 height: 16px; }
@@ -7,17 +16,18 @@ background-color: rgba(0, 0, 0, 0.2);
 -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07); }
 
 	 .ui-autocomplete { 
-max-height: 200px; 
+max-height: 220px; 
 overflow-y: auto; 
 overflow-x: hidden;
 scrollbar-color: #10806A #10806A;
-border-radius: 0.5rem;
+border-radius: 1rem;
 max-width: 274px;
 }
 
 .roundedborder{
-	border-collapse: separate; 
-	border-radius: 0.5rem;
+  position: absolute; 
+  right :35px; 
+  z-index:999999;
 }
 
 .outlink {
