--- a/assets/templates/Header.html
+++ b/assets/templates/Header.html
@@ -7,7 +7,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="$title - find.Dhamma.gift" />
 <meta property="og:description" content="$title - find.Dhamma.gift" />
-
+<meta name="description" content="$title - find.Dhamma.gift">
 <meta name="twitter:title" content="$title - find.Dhamma.gift">
 <meta name="twitter:description" content="$title - find.Dhamma.gift">
 <meta property="og:image" itemprop="image" content="" />
