--- a/o/index.css
+++ b/o/index.css
@@ -74,6 +74,7 @@ h5 span.pli-lang {
 }
 
 #sutta.hide-pali p span.pli-lang,
+#sutta.hide-pali h1 span.pli-lang,
 #sutta.hide-pali h2 span.pli-lang,
 #sutta.hide-pali h3 span.pli-lang,
 #sutta.hide-pali h4 span.pli-lang,
